[tool.poetry]
name = "mpy-blox"
version = "0.3.2"
description = "MicroPython building blox"
authors = ["Michel Bouwmans <m.bouwmans@ep-games.eu>"]
license = "MPL-2.0"
packages = [
    {include="mpy_blox"},
    {include="logging"}
]
exclude = [
    "PKG-INFO",
    "setup.py",
]
include = [
    "mqtt_as.mpy",
    "README.md",
    "main.py"
]

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.pyright]
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingSuperCall = false
reportMissingParameterType = false
reportUntypedFunctionDecorator = false
reportUnknownParameterType = false
reportUnknownArgumentType = false

extraPaths = [
    "/home/mfb/Development/PyBoardTypeshed/micropython_typesheds"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
