[tool.poetry]
name = "mpy-blox"
version = "0.4.5"
description = "MicroPython building blox"
authors = ["Maruno Ulfdrengr <maruno@ulfdrengr.nl>"]
license = "MPL-2.0"
packages = [
    {include="mpy_blox"},
    {include="logging"}
]
exclude = [
    "PKG-INFO",
    "setup.py",
]
include = [
    "README.md",
    "main.py"
]

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
wheel = "^0.46.3"
mpy-cross = "^1.27.0.post2"

[tool.pyright]
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingSuperCall = false
reportMissingParameterType = false
reportUntypedFunctionDecorator = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnusedCallResult = false
reportUnannotatedClassAttribute = false
reportAny = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
